--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "^15.0.0",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.15.1",
@@ -61,7 +61,6 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.0.0",
