--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@genkit-ai/google-genai": "^1.0.0",
-    "@genkit-ai/next": "^1.0.0",
+    "@genkit-ai/google-genai": "^0.5.5",
+    "@genkit-ai/next": "^0.5.5",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -34,24 +34,24 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.2.10",
-    "genkit": "^1.0.0",
+    "genkit": "^0.5.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.475.0",
-    "next": "^15.0.0",
+    "next": "14.2.4",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.15.1",
@@ -63,7 +63,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.0.0",
+    "genkit-cli": "^0.5.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
