--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,13 @@
   "description": "Emergency medical response system",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/favicon.ico",
+      "sizes": "any",
+      "type": "image/x-icon"
     }
   ],
-  "theme_color": "#E5F6FD",
-  "background_color": "#E5F6FD",
+  "theme_color": "#111827",
+  "background_color": "#111827",
   "start_url": "/",
   "display": "standalone",
   "scope": "/"
